--- a/GSPA_Demo.html
+++ b/GSPA_Demo.html
@@ -8,6 +8,8 @@
       <meta name ="viewport" content="width=device-width, initial-scale=1.0">
       <link href="Style.css" rel="stylesheet" />
       <script src="JavaScript.js"></script>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
    </head>
 	
    <body>
