--- a/Demo 9 Position Parameter and Timeline Control/GSPA_Demo.html
+++ b/Demo 9 Position Parameter and Timeline Control/GSPA_Demo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   <title>GSAP Demo 8</title>
+   <title>GSAP Demo 9</title>
    <meta charset="utf-8" />
    <meta name="author" content="Eduardo Castillo Fong" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +13,19 @@
 </head>
 
 <body>
-   <h2 class="title">Basic Sequencing</h2>
+   <h2 class="title">Position Parameter and Timeline Control</h2>
    <div class="box green"></div>
    <div class="box orange"></div>
    <div class="box grey"></div>
+   <div class="box pink"></div>
+
+   <div class="nav">
+      <button id="play">play()</button>
+      <button id="pause">pause()</button>
+      <button id="resume">resume()</button>
+      <button id="reverse">reverse()</button>
+      <button id="restart">restart()</button>
+    </div>
 
    <script src="JavaScript.js"></script>
 </body>
